@startuml

package "com.example.schema" {
  class Authortype {
    -firstname : String
    -lastname : String
    -birthyear : int
    -biography : String
    -authorid : String
    --
    +getFirstname() : String
    +setFirstname(firstname: String) : void
    +getLastname() : String
    +setLastname(lastname: String) : void
    +getBirthyear() : int
    +setBirthyear(birthyear: int) : void
    +getBiography() : String
    +setBiography(biography: String) : void
    +getAuthorid() : String
    +setAuthorid(authorid: String) : void
  }

  class Booktype {
    -title : String
    -author : List<Authortype>
    -isbn : String
    -publishedyear : int
    -category : String
    -price : BigDecimal
    -description : String
    -instock : boolean
    -bookid : String
    -edition : int
    --
    +getTitle() : String
    +setTitle(title: String) : void
    +getAuthor() : List<Authortype>
    +setAuthor(author: List<Authortype>) : void
    +getIsbn() : String
    +setIsbn(isbn: String) : void
    +getPublishedyear() : int
    +setPublishedyear(publishedyear: int) : void
    +getCategory() : String
    +setCategory(category: String) : void
    +getPrice() : BigDecimal
    +setPrice(price: BigDecimal) : void
    +getDescription() : String
    +setDescription(description: String) : void
    +getInstock() : boolean
    +setInstock(instock: boolean) : void
    +getBookid() : String
    +setBookid(bookid: String) : void
    +getEdition() : int
    +setEdition(edition: int) : void
  }

  class Bookstoretype {
    -storename : String
    -address : String
    -book : List<Booktype>
    -storeid : String
    -established : LocalDate
    --
    +getStorename() : String
    +setStorename(storename: String) : void
    +getAddress() : String
    +setAddress(address: String) : void
    +getBook() : List<Booktype>
    +setBook(book: List<Booktype>) : void
    +getStoreid() : String
    +setStoreid(storeid: String) : void
    +getEstablished() : LocalDate
    +setEstablished(established: LocalDate) : void
  }
}

Booktype *-- Authortype : contains
Bookstoretype *-- Booktype : contains

@enduml
